--- a/my-blog/package.json
+++ b/my-blog/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-buddy/ide-toolbox": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.4",
-    "@react-buddy/ide-toolbox": "^2.2.1"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
