--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "firebase-admin": "^11.2.1",
     "mongodb": "^4.11.0"
   },
   "devDependencies": {
